--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1233,10 +1233,17 @@ a.layout-grid-view {
 }
 
 .bb-media-privacy-wrap .privacy-wrap {
-  display: block;
-  height: 20px;
-  width: 20px;
+  display: inline-block;
+}
+
+.bb-media-privacy-wrap .privacy {
+  display: flex;
+  align-items: center;
   cursor: pointer;
+  border: 1px solid #E7E9EC;
+  line-height: 1;
+  padding: 2px 2px 2px 4px;
+  border-radius: 3px;
 }
 
 .bb-media-privacy-wrap .privacy:before {
@@ -1245,6 +1252,15 @@ a.layout-grid-view {
   font-size: 18px;
   vertical-align: middle;
   display: inline-block;
+}
+
+.bb-media-privacy-wrap .privacy:after {
+  content: "\f140";
+  font-family: dashicons;
+  font-size: 11px;
+  vertical-align: middle;
+  display: inline-block;
+  line-height: 1;
 }
 
 .bb-media-privacy-wrap .privacy.onlyme:before {
@@ -1303,6 +1319,12 @@ a.layout-grid-view {
   margin: 0;
   padding: 10px 15px;
   position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.bb-media-privacy-wrap .activity-privacy li:hover {
+  background: #fafafa;
 }
 
 .bb-media-privacy-wrap .activity-privacy .selected {
@@ -1311,6 +1333,27 @@ a.layout-grid-view {
 
 .bb-media-privacy-wrap .activity-privacy.bb-open {
   display: block;
+}
+
+.activity-privacy > li:before {
+  content: "\f11f";
+  font-family: dashicons;
+  font-size: 16px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.activity-privacy > li.onlyme:before {
+  content: "\f160";
+}
+
+.activity-privacy > li.loggedin:before {
+  content: "\f307";
+}
+
+.activity-privacy > li.friends:before {
+  content: "\f110";
 }
 
 .gif-media-search {
