#266 - Improved UI of Activity document

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -674,7 +674,8 @@ span.dashicons.dashicons-admin-file:before {
 		  display: block;
 		  font-weight: bold;
 		}
-		.document-description{
+		.document-description,
+		.document-helper-text{
 		  display: inline-block;
 		  color: #7F868F;
 		}
