--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1672,6 +1672,85 @@ img.emojioneemoji {
 			}
 		}
 	}
+}
 
-	
+
+#bp-media-create-folder,
+#bp-media-create-child-folder{
+	#bb-folder-location{
+		display: none;
+	}
+	.bb-folder-location-select{
+		background-repeat: no-repeat;
+		background-position: right 1rem center;
+		display: inline-block;
+		font-family: inherit;
+		font-style: inherit;
+		font-size: 15px;
+		height: 40px;
+		outline: 0;
+		vertical-align: middle;
+		background-color: #fff;
+		border: 1px solid #dedfe2;
+		border-radius: 3px;
+		box-shadow: none;
+		color: #4d5c6d;
+		display: block;
+		position: relative;
+		&:after{
+			content: '<';
+			color: #dedfe2;
+			position: absolute;
+			right: 1em;
+			top: 50%;
+			transform: translateY(-50%) rotate(-90deg);
+			-webkit-transform: translateY(-50%) rotate(-90deg);
+			-moz-transform: translateY(-50%) rotate(-90deg);
+			pointer-events: none;
+		}
+		.bb-folder-location-selected{
+			line-height: 1.6875rem;
+			padding: 5px 40px 7px 10px;
+			display: block;
+		}
+		.bb-folder-location-select-list{
+			position: absolute;
+			left: -1px;
+			right: -1px;
+			bottom: 40px;
+			margin: 0;
+			background-color: #fff;
+			border-radius: 4px;
+			box-shadow: 0 6px 24px 0 rgba(18,43,70,.08);
+			list-style: none;
+			display: none;
+			max-height: 400px;
+			overflow: auto;
+			padding: 0;
+			z-index: 11;
+			li{
+				cursor: pointer;
+				padding: 5px 10px;
+				&:hover, &.selected{
+					color: #007cff;
+					background-color: #f5f5f5;
+				}
+				&.folder_l_1_1{
+					padding-left: 25px;
+				}
+				&.folder_l_1_1_1{
+					padding-left: 50px;
+				}
+				&.folder_l_1_1_1_1{
+					padding-left: 75px;
+				}
+				&.folder_l_1_1_1_1_1{
+					padding-left: 100px;
+				}
+				&.folder_l_1_1_1_1_1_1{
+					padding-left: 125px;
+				}
+			}
+		}
+	}
 }
